# clock-synchronization

./: .gitignore  Cargo.toml  build-clocks.bat  build.rs
proto/: clock.proto
src/: grpc_server.rs  lib.rs  quartz_clock.rs
