[package]
name = "clock-synchronization"
version = "0.1.0"
edition = "2021"
default-run = "native_demo"

[[bin]]
name = "native_demo"
path = "bin/native_demo/mod.rs"

[[bin]]
name = "main"
path = "bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.7.2"
prost = "0.10.4"
eframe = "0.19.0"
egui_extras = "0.19.0"
tokio-stream = "0.1.9"
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"], optional = true }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
poll-promise = { version = "0.1.0", features = ["tokio"], optional=true }
dhat = { version = "0.3.0", optional = true }

[build-dependencies]
tonic-build = "0.7"

[features]
default = ["master", "slave"]
dhat-profile = ["dhat"]
persistence = ["eframe/persistence", "serde"] 
master = []
slave = ["poll-promise"]

[profile.release]
debug = 1
